Move main to launcher.